@@ -9,6 +9,7 @@ Changelog for getTables.
 - Исправление ошибок grtTree.
 - Чистка предупреждений php.
 - Исправлено readonly для number и decimal.
+- Доработана функция getTables->calc_excel_formula.
 
 1.11.3-alpha
 - Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.
